# AOC2021

./: pyproject.toml
aoc2021/: day1.py  day12.py  day2.py  day3.py  day4.py  day5.py  day8.py
tests/: test_aoc2021.py
