[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Benjamin Lyng Jørgensen <benjamin@lyng.space>"]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "^8.12.0"
pre-commit = "^2.16.0"
httpx = "^0.21.1"
redis = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
